[project]
name = "runpod-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "runpod>=1.0.0",
    "scipy>=1.7.0",
    "sounddevice>=0.4.5",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "orpheus-speech",
]
